Fix navbar hamburger icon positioning to align centrally

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,15 +9,11 @@
     color: #fff;
 }
 
-button.navbar-toggler {
-    display: grid;
-    place-items: center;
-    border-color: 1px solid white;
-}
 .navbar-toggler-icon {
     color: white;
-    font-size: 1.5em;
-    /* background-color: blue; */
+    font-size: 2em;
+    height: auto;
+    width: auto;
 }
 
 .dropdown-menu {
